# clues

./: .gitignore  README.md  example.py  pyproject.toml
.github/workflows/: tests.yml
src/clues/: __init__.py  core.py  models.py
src/clues/investigators/: __init__.py  attribute_error.py  csv_error.py  cuda_out_of_memory_error.py  file_not_found.py  import_error.py  index_error.py  is_a_directory_error.py  json_decode_error.py  key_error.py  module_not_found.py  name_error.py  not_a_directory_error.py  not_implemented_error.py  numpy_shape_error.py  os_error.py  pandas_empty_data_error.py  pandas_key_error.py  permission_error.py  runtime_error.py  timeout_error.py  type_error.py  unicode_decode_error.py  value_error.py  zero_division_error.py
tests/: test_attribute_error.py  test_csv_error.py  test_cuda_out_of_memory_error.py  test_fallback.py  test_file_not_found.py  test_import_error.py  test_index_error.py  test_is_a_directory_error.py  test_json_decode_error.py  test_key_error.py  test_markdown_report.py  test_module_not_found.py  test_name_error.py  test_not_a_directory_error.py  test_not_implemented_error.py  test_numpy_shape_error.py  test_os_error.py  test_pandas_empty_data_error.py  test_pandas_key_error.py  test_permission_error.py  test_runtime_error.py  test_save_markdown_report.py  test_timeout_error.py  test_to_dict.py  test_type_error.py  test_unicode_decode_error.py  test_value_error.py  test_zero_division_error.py
